# sncast

./: .gitignore  README.md  __init__.py  debug_sncast.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  sncast.py  todo.md
.github/workflows/: pylint.yml  python-app.yml
data/: gmpe_coeffs.json
docs/source/: citations.rst  conf.py  index.rst  modules.rst  sncast.rst
sncast/: core.py  detcap_model.py  gmpes.py  magnitude_conversions.py  model_detection_capability.py  noise_estimation.py  sncast.py
tests/: test_convert_mw_to_ml.py  test_core.py  test_das_detcap.py  test_detcap_model.py  test_hello_world.py  test_model_detection_capability.py  test_noise_estimation.py
tests/data/: das_dummy_data.csv  station_data.csv  tampnet_das_month_noise.csv
