[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sncast"
dynamic = ["version"]
description = "Software for modelling earthquake detection capability for a seismic network"
readme = "README.md"
license = "GNU General Public License v3.0 (GPLv3)"
requires-python = ">=3.11"
authors = [
    { name = "Martin Molhoff", email = "joseph.asplet@earth.ox.ac.uk" },
    { name = "Joseph Asplet" },
]
classifiers = [
    "License :: OSI Approved :: GNU GPL v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.26.4",
    "obspy>=1.4.1",
    "pandas>=2.1.4",
    "pytest>=7.3.1",
    "xarray>=2025.3.0pygc>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/Jasplet/sncast"

[tool.hatch.version]
path = "sncast/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/sncast",
]
