[project]
name = "sncast"
version = "0.1.0"
description = "Software for modelling earthquake detection capability for a seismic network"
readme = "README.md"
license = "GNU General Public License v3.0 (GPLv3)"
authors = [
    { name = "Martin Molhoff" },
    { name = "Joseph Asplet", email = "joseph.asplet@earth.ox.ac.uk" },
]
classifiers = [
    "License :: OSI Approved :: GNU GPL v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pygc>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[project.urls]
Homepage = "https://github.com/Jasplet/sncast"

